--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                                class="text-gray-600 hover:text-primary transition-colors"
                                target="_blank"
                                rel="noopener noreferrer">
-                                Rruga Agim Ramadani mbrapa Outlet-it, Magjistralja Prishtinë-Ferizaj
+                                Magjistralja Prishtinë-Ferizaj, Outlet-it
                             </a>
                         </div>
                     </div>
