--- a/index.html
+++ b/index.html
@@ -261,6 +261,14 @@
 
     <footer id="footer"></footer>
 
+    <!-- WhatsApp Floating Button -->
+    <a href="https://wa.me/38348884220" 
+       target="_blank" 
+       rel="noopener noreferrer" 
+       class="fixed bottom-4 right-4 bg-primary text-white rounded-full p-4 shadow-lg hover:bg-secondary transition-colors">
+        <i class="fab fa-whatsapp text-3xl"></i>
+    </a>
+
     <script src="js/navbar.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/imageSlider.js"></script>
