--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
                                class="text-gray-600 hover:text-primary transition-colors"
                                target="_blank"
                                rel="noopener noreferrer">
-                                Magjistralja Prishtinë-Ferizaj, Mbrapa Outlet-it
+                                Rruga Agim Ramadani mbrapa Outlet-it, Magjistralja Prishtinë-Ferizaj
                             </a>
                         </div>
                     </div>
@@ -107,9 +107,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="space-y-6 sm:space-y-8 fade-up delay-200">
-                    <h2 class="text-2xl sm:text-3xl font-bold mb-6">Na Ndiqni në Rrjetet Sociale</h2>
-                    <div class="flex flex-wrap gap-8">
+                <div class="space-y-6 sm:space-y-8 fade-up delay-200 flex flex-col items-center md:items-start">
+                    <h2 class="text-2xl sm:text-3xl font-bold mb-6 text-center md:text-left">Na Ndiqni në Rrjetet Sociale</h2>
+                    <div class="flex flex-wrap gap-8 justify-center">
                         <!-- Instagram -->
                         <a href="https://www.instagram.com/troifurniture/" 
                            target="_blank" 
@@ -141,6 +141,17 @@
                                 <i class="fab fa-tiktok text-white text-3xl"></i>
                             </div>
                             <span class="mt-2 text-gray-600 group-hover:text-primary">TikTok</span>
+                        </a>
+
+                        <!-- WhatsApp -->
+                        <a href="https://wa.me/38348884220" 
+                           target="_blank" 
+                           rel="noopener noreferrer" 
+                           class="flex flex-col items-center group">
+                            <div class="w-16 h-16 bg-primary hover:bg-secondary rounded-full flex items-center justify-center transition-all duration-300 group-hover:scale-110">
+                                <i class="fab fa-whatsapp text-white text-3xl"></i>
+                            </div>
+                            <span class="mt-2 text-gray-600 group-hover:text-primary">WhatsApp</span>
                         </a>
                     </div>
 
