--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
     <section class="py-12 sm:py-16">
         <div class="container mx-auto px-4">
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 lg:gap-12">
-                <div class="bg-white p-6 sm:p-8 rounded-lg shadow-lg fade-up">
+                <div class="bg-white p-6 sm:p-8 fade-up">
                     <h2 class="text-2xl sm:text-3xl font-bold mb-6">Informacioni i Kontaktit</h2>
                     
                     <div class="flex items-start space-x-4">
@@ -62,7 +62,7 @@
                         </div>
                         <div>
                             <h3 class="text-xl font-semibold mb-2">Adresa Jonë</h3>
-                            <a href="https://www.google.com/maps/place/Troi+Furniture/@42.374683,21.171561,843m/data=!3m1!1e3!4m6!3m5!1s0x13547f1e0cdf7409:0x5a32db6337a1cce6!8m2!3d42.3746274!4d21.1724148!16s%2Fg%2F11wxjyshqb?hl=en&entry=ttu&g_ep=EgoyMDI1MDEyOS4xIKXMDSoASAFQAw%3D%3D" 
+                            <a href="https://www.google.com/maps/place/Troi+Furniture/@42.374683,21.171561,843m/data=!3m1!1e3!4m6!3m5!1s0x13547f1e0cdf7409:0x5a32db6337a1cce6!8m2!3d42.3746274!4d21.1724148!16s%2Fg%2F11wxjyshqb?hl=en&entry=ttu" 
                                class="text-gray-600 hover:text-primary transition-colors"
                                target="_blank"
                                rel="noopener noreferrer">
