--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Hero Section -->
     <section class="relative h-screen">
         <img src="img/bg.jpg" alt="Luxurious interior" class="absolute inset-0 w-full h-full object-cover brightness-50">
-        <div class="absolute inset-0 flex flex-col items-center justify-center text-white">
+        <div class="absolute inset-0 flex flex-col items-center justify-center text-white fade-up">
             <img src="img/logo_no_bg_tiny.png" alt="Troi Furniture Logo" class="mb-8 w-48">
             <h1 class="text-4xl md:text-5xl font-bold mb-4 text-center">Troi Furniture</h1>
             <p class="text-lg md:text-xl mb-8 text-center">Përmirësoni Hapësirën Tuaj të Jetesës me Elegancë të Përjetshme</p>
